small change in navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <div class="home-page">
   <div class="nav-bar">
     <div class="nav-links">
+      <a href="/">Home</a>
       <a href="/about">About</a>
       <a href="/media">Media</a>
       <a href="/contact">Contact</a>
