--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css", media: "all", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
     </style>
@@ -16,8 +18,6 @@
   </head>
 
   <body>
-  <%= render 'shared/navbar' %>
     <%= yield %>
-
   </body>
 </html>
