--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
 <div class="home-page">
   <div class="nav-bar">
     <div class="nav-links">
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/media">Media</a>
-      <a href="/contact">Contact</a>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#media">Media</a>
+      <a href="#contact">Contact</a>
     </div>
 
     <%= link_to root_path, class: "main-title" do %>
