--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,5 +14,5 @@
   <%= render "media" %>
   <%= render "contact" %>
 
-  <a href="#home" class="back-to-top" id="backToTop" title="Back to top">↑</a>
+  <a href="#home" class="back-to-top" id="backToTop" title="Back to top">▲</a>
 </div>
