for now its good

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,9 +13,10 @@
 
     <div class="social-icons">
       <a href="https://instagram.com/aleniconve" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/alejandro-contreras-vergara/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://www.imdb.com/name/nm9080950/?ref_=nv_sr_srsg_5_tt_0_nm_8_in_0_q_alejandro%2520contreras" target="_blank"><i class="fab fa-imdb"></i></a>
-      <a href="https://github.com/aleniconve" target="_blank"><i class="fab fa-github"></i></a>
+      <%# <a href="https://github.com/aleniconve" target="_blank"><i class="fab fa-github"></i></a> %>
+      <a href="https://www.filmmakers.eu/" target="_blank"><i class="fa-solid fa-film"></i></a>
+      <a href="https://www.linkedin.com/in/alejandro-contreras-vergara/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
   </div>
 
