last thing that I tried

--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -1,11 +1,13 @@
-<div id="about" class="section">
-  <div class="banner">
-      <div class="banner-text">
-        <h1 class="main-title">Actor</h1>
-      </div>
-      <div class="banner-image">
-        <%= image_tag "Alejandro_Contreras_Portrait", class: "portrait", alt: "Portrait of Alejandro" %>
-        <%= image_tag "Copia de Alejandro_Contreras_PortraitB&W", class: "portrait hide-on-mobile", alt: "Portrait of Alejandro" %>
-      </div>
+<section id="media" class="media-section">
+  <div class="media-content">
+    <div class="media-item fade-in-left">
+      <%= image_tag "Ale1.jpg", class: "media-img" %>
     </div>
-</div>
+    <div class="media-item fade-in-right">
+      <%= image_tag "Ale2.jpg", class: "media-img" %>
+    </div>
+    <div class="media-text fade-in-up">
+      <p>I’m an actor with experience in film, theater, and voice work. I bring presence and versatility to the screen, always focused on craft and clarity. Let the work speak for itself.</p>
+    </div>
+  </div>
+</section>
