--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="banner-image">
       <%= image_tag "Alejandro_Contreras_Portrait", class: "portrait", alt: "Portrait of Alejandro" %>
-      <%= image_tag "Copia de Alejandro_Contreras_PortraitB&W", class: "portrait hide-on-mobile", alt: "Portrait of Alejandro" %>
+      <%= image_tag "AlePro", class: "portrait hide-on-mobile", alt: "Portrait of Alejandro" %>
     </div>
   </div>
 
