got rid of the bg for now

--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -238,10 +238,10 @@ body {
   }
 }
 
-body {
-  background-image: image-url('pexels-pietrozj.jpg');
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-}
+// body {
+//   background-image: image-url('pexels-pietrozj.jpg');
+//   background-attachment: fixed;
+//   background-size: cover;
+//   background-position: center center;
+//   background-repeat: no-repeat;
+// }
