--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -2,28 +2,28 @@
   <div class="reveal-container from-left" data-controller="reveal">
     <%= image_tag "Ale3.jpg", class: "reveal-img" %>
     <div class="overlay-text">
-      <p>Actor with a passion for storytelling and movement.</p>
+      <p>Hej! My name is Alejandro Contreras I'm a chilean Actor and you can call me Ale. Alejandro it's only for when you are mad me...which I hope you won't!</p>
     </div>
   </div>
 
   <div class="reveal-container from-right" data-controller="reveal">
     <%= image_tag "Ale2.jpg", class: "reveal-img" %>
     <div class="overlay-text">
-      <p>From stage to screen — driven by dedication, not talent.</p>
+      <p>Did my studies in the Universidad de Chile, in Santiago. I also studied for a year and half in the Studio Theater Acting Conservatory in Washington D.C.</p>
     </div>
   </div>
 
   <div class="reveal-container from-left" data-controller="reveal">
     <%= image_tag "Fauno.jpg", class: "reveal-img" %>
     <div class="overlay-text">
-      <p>Blending physical theater, voice, and emotion.</p>
+      <p>My experience on this craft is wide. I've done Classical theater, Street theater, Children's theater Film (and Short films), Series, Telenovelas, Commercials...you name it!  </p>
     </div>
   </div>
 
   <div class="reveal-container from-right" data-controller="reveal">
     <%= image_tag "Ale1.jpg", class: "reveal-img" %>
     <div class="overlay-text">
-      <p>International experience, local soul.</p>
+      <p>Since 2023 I moved to Germany, following love and now recently I feel myself cheeky enough to try out as an actor in german. Or english...or spanish...or whatever language you would like me to learn...I am sucker for languages!</p>
     </div>
   </div>
 </div>
