--- a/app/assets/stylesheets/_about.scss
+++ b/app/assets/stylesheets/_about.scss
@@ -53,7 +53,7 @@
 
   // Show white overlay and dim image once revealed
   &.revealed .reveal-img {
-    opacity: 0.3;
+    opacity: 0.6;
     transform: scale(1);
   }
 
@@ -67,7 +67,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(255, 255, 255, 0.8);
+    // background: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.4);
     color: black;
     display: flex;
     align-items: center;
