--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,22 @@
 <div id="home" class="home-page">
+
   <%= render 'shared/navbar' %>
+
   <div class="banner">
+
     <div class="banner-text">
       <h1 class="main-title">Actor</h1>
     </div>
+
     <div class="banner-image">
-      <%= image_tag "Alejandro_Contreras_Portrait", class: "portrait", alt: "Portrait of Alejandro" %>
-      <%= image_tag "AlePro", class: "portrait hide-on-mobile", alt: "Portrait of Alejandro" %>
+      <div class="portrait-wrapper">
+        <%= image_tag "Alejandro_Contreras_Portrait", class: "portrait original", alt: "Portrait of Alejandro" %>
+        <%= image_tag "Copia de Alejandro_Contreras_PortraitB&W", class: "portrait hover", alt: "Portrait of Alejandro Hover" %>
+      </div>
+      <div class="portrait-wrapper hide-on-mobile">
+        <%= image_tag "AlePro", class: "portrait original", alt: "Portrait of Alejandro" %>
+        <%= image_tag "Treeman", class: "portrait hover", alt: "Portrait of Alejandro Hover" %>
+      </div>
     </div>
   </div>
 
@@ -15,4 +25,5 @@
   <%= render "contact" %>
 
   <a href="#home" class="back-to-top" id="backToTop" title="Back to top">▲</a>
+
 </div>
