fixed hover bug and added more gap

--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -6,7 +6,7 @@
       <div class="banner-image">
       <div class="portrait-wrapper">
         <%= image_tag "Alejandro_Contreras_Portrait", class: "portrait original", alt: "Portrait of Alejandro" %>
-        <%= image_tag "Copia de Alejandro_Contreras_PortraitB&W", class: "portrait hover", alt: "Portrait of Alejandro Hover" %>
+        <%= image_tag "Alejandro_Contreras_PortraitB&W", class: "portrait hover", alt: "Portrait of Alejandro Hover" %>
       </div>
       <div class="portrait-wrapper hide-on-mobile">
         <%= image_tag "AlePro", class: "portrait original", alt: "Portrait of Alejandro" %>
