--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
     <div class="banner-image">
       <div class="portrait-wrapper">
         <%= image_tag "Alejandro_Contreras_Portrait", class: "portrait original", alt: "Portrait of Alejandro" %>
-        <%= image_tag "Copia de Alejandro_Contreras_PortraitB&W", class: "portrait hover", alt: "Portrait of Alejandro Hover" %>
+        <%= image_tag "Alejandro_Contreras_PortraitB&W", class: "portrait hover", alt: "Portrait of Alejandro Hover" %>
       </div>
       <div class="portrait-wrapper hide-on-mobile">
         <%= image_tag "AlePro", class: "portrait original", alt: "Portrait of Alejandro" %>
@@ -24,6 +24,6 @@
   <%= render "media" %>
   <%= render "contact" %>
 
-  <a href="#home" class="back-to-top" id="backToTop" title="Back to top">▲</a>
+  <a href="#home" id="backToTop" class="back-to-top">▲</a>
 
 </div>
