fixed temporary the scrolling to other pages, after finishing the pages I will do something with javascript

--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -303,3 +303,7 @@ body {
   .back-to-top.bounce {
     animation: bounce 1s;
   }
+
+[id] {
+  scroll-margin-top: 300px;  /* Adjust this value to your navbar height or desired gap */
+}
