--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,9 @@
 
   <body>
     <%= yield %>
+    <div id="lightbox-overlay" class="lightbox-overlay" style="display:none;">
+      <span id="lightbox-close" class="lightbox-close">&times;</span>
+      <img id="lightbox-image" src="" alt="Enlarged image" />
+    </div>
   </body>
 </html>
