--- a/app/views/pages/_media.html.erb
+++ b/app/views/pages/_media.html.erb
@@ -1,17 +1,47 @@
-<div id="media" class="section">
-  <div class="banner">
-      <div class="banner-text">
-        <h1 class="main-title">Actor</h1>
-      </div>
-    <div class="banner-image">
-      <div class="portrait-wrapper">
-        <%= image_tag "Alejandro_Contreras_Portrait", class: "portrait original", alt: "Portrait of Alejandro" %>
-        <%= image_tag "Alejandro_Contreras_PortraitB&W", class: "portrait hover", alt: "Portrait of Alejandro Hover" %>
-      </div>
-      <div class="portrait-wrapper hide-on-mobile">
-        <%= image_tag "AlePro", class: "portrait original", alt: "Portrait of Alejandro" %>
-        <%= image_tag "Treeman", class: "portrait hover", alt: "Portrait of Alejandro Hover" %>
-      </div>
+<section id="media" class="media-section">
+  <h2 class="section-title">Media</h2>
+
+  <div class="video-reels">
+    <div class="video-reel">
+      <h3>Acting Reel</h3>
+      <iframe
+        width="100%"
+        height="260"
+        src="https://www.youtube.com/watch?v=TZ-uE0FItxY "
+        title="Acting Reel"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
     </div>
+
+    <div class="video-reel">
+      <h3>Commercials</h3>
+      <iframe
+        width="100%"
+        height="260"
+        src="https://www.youtube.com/watch?v=OuJ-DbkdvXA"
+        title="Commercials Reel"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
     </div>
-</div>
+  </div>
+
+  <div class="photo-gallery">
+    <%= link_to image_path("Fauno.jpg"), class: "lightbox-link" do %>
+      <%= image_tag "Fauno.jpg", alt: "Photo 1", class: "gallery-photo" %>
+    <% end %>
+    <%= link_to image_path("Ale3a.jpg"), class: "lightbox-link" do %>
+      <%= image_tag "Ale3a.jpg", alt: "Photo 2", class: "gallery-photo" %>
+    <% end %>
+        <%= link_to image_path("Fauno.jpg"), class: "lightbox-link" do %>
+      <%= image_tag "Fauno.jpg", alt: "Photo 1", class: "gallery-photo" %>
+    <% end %>
+    <%= link_to image_path("Ale3a.jpg"), class: "lightbox-link" do %>
+      <%= image_tag "Ale3a.jpg", alt: "Photo 2", class: "gallery-photo" %>
+    <% end %>
+
+  </div>
+</section>
