--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,6 +23,7 @@
   <%= render "about" %>
   <%= render "media" %>
   <%= render "contact" %>
+  <%= render 'media' %>
 
   <a href="#home" id="backToTop" class="back-to-top">▲</a>
 
