--- a/app/views/pages/_media.html.erb
+++ b/app/views/pages/_media.html.erb
@@ -36,12 +36,13 @@
     <%= link_to image_path("Ale3a.jpg"), class: "lightbox-link" do %>
       <%= image_tag "Ale3a.jpg", alt: "Photo 2", class: "gallery-photo" %>
     <% end %>
-        <%= link_to image_path("Fauno.jpg"), class: "lightbox-link" do %>
-      <%= image_tag "Fauno.jpg", alt: "Photo 1", class: "gallery-photo" %>
+        <%= link_to image_path("Ale5.jpg"), class: "lightbox-link" do %>
+      <%= image_tag "Ale5.jpg", alt: "Photo 1", class: "gallery-photo" %>
     <% end %>
-    <%= link_to image_path("Ale3a.jpg"), class: "lightbox-link" do %>
-      <%= image_tag "Ale3a.jpg", alt: "Photo 2", class: "gallery-photo" %>
+    <%= link_to image_path("felliniana.jpg"), class: "lightbox-link" do %>
+      <%= image_tag "felliniana.jpg", alt: "Photo 2", class: "gallery-photo" %>
     <% end %>
 
   </div>
 </section>
+
