--- a/app/views/pages/_contact_form.html.erb
+++ b/app/views/pages/_contact_form.html.erb
@@ -1,18 +1,20 @@
-<%= form_with url: "/contact_submit", method: :post, html: { id: "contact-form" }, remote: true do |f| %>
-  <div class="form-group">
-    <%= f.label :name, "Name" %>
-    <%= f.text_field :name, required: true, placeholder: "Your name" %>
-  </div>
+<div class="contact-form">
+  <%= form_with url: contact_submit_path, method: :post, data: { turbo: true }, id: "contact-form" do |f| %>
+    <div class="form-group">
+      <%= f.label :name, "Name" %>
+      <%= f.text_field :name, required: true, placeholder: "Your name" %>
+    </div>
 
-  <div class="form-group">
-    <%= f.label :email, "Email" %>
-    <%= f.email_field :email, required: true, placeholder: "your.email@example.com" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :email, "Email" %>
+      <%= f.email_field :email, required: true, placeholder: "your.email@example.com" %>
+    </div>
 
-  <div class="form-group">
-    <%= f.label :message, "Message" %>
-    <%= f.text_area :message, required: true, placeholder: "Write your message here...", rows: 5 %>
-  </div>
+    <div class="form-group">
+      <%= f.label :message, "Message" %>
+      <%= f.text_area :message, required: true, placeholder: "Write your message here...", rows: 5 %>
+    </div>
 
-  <%= f.submit "Send", class: "btn-submit" %>
-<% end %>
+    <%= f.submit "Send", class: "btn-submit" %>
+  <% end %>
+</div>
